--- a/My_portfolio.html
+++ b/My_portfolio.html
@@ -63,7 +63,7 @@
             <div class="hero-actions" data-reveal style="transition-delay:.24s">
                 <a class="btn primary" href="#projects">View My Work</a>
                 <a class="btn ghost" href="#journey">My Learning Journey</a>
-                <a class="btn" href="#" target="_blank" rel="noreferrer">Download Resume</a>
+                <a class="btn"onclick="downloadResume()" target="_blank" rel="noreferrer">Download Resume</a>
             </div>
         </div>
         <div class="hero-card order-1 order-md-2 d-none d-md-block" aria-hidden="true" data-reveal style="transition-delay:.20s">
@@ -339,11 +339,11 @@
                     </svg>:
                 </strong> <a href="tel:+91-9000000000">+91 90000 00000</a></p>
                 <div class="hero-actions" style="margin-top:10px">
-                    <a class="btn " href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
+                    <a class="btn " href="https://www.linkedin.com/in/mrudula-barasakar-224823337/" target="_blank" rel="noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon3" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50"><path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
                         </svg>
                     </a>
-                    <a class="btn ghost" href="https://github.com/" target="_blank" rel="noreferrer">
+                    <a class="btn ghost" href="https://github.com/Mrudula-Baraskar" target="_blank" rel="noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px"class="icon" y="0px" width="100" height="100" viewBox="0 0 48 48">
 <path d="M 24 4 C 19.963209 4 16.192498 5.2011807 13.046875 7.2636719 A 1.50015 1.50015 0 1 0 14.691406 9.7714844 C 17.365783 8.0179755 20.556791 7 24 7 C 33.406292 7 41 14.593708 41 24 C 41 26.707746 40.36968 29.257322 39.248047 31.525391 A 1.5001887 1.5001887 0 0 0 41.9375 32.855469 C 43.257867 30.185538 44 27.174254 44 24 C 44 12.972292 35.027708 4 24 4 z M 15.800781 13.076172 C 14.472781 15.202172 15.273563 17.527813 15.726562 18.507812 C 14.637562 19.788813 14 21.334 14 23 C 14 26.78 17.280547 29.939391 21.685547 30.775391 C 20.376547 31.448391 19.399609 32.67225 19.099609 34.15625 L 17.783203 34.15625 C 16.486203 34.15625 15.98225 33.629234 15.28125 32.740234 C 14.58925 31.851234 13.845172 31.253859 12.951172 31.005859 C 12.469172 30.954859 12.144453 31.321484 12.564453 31.646484 C 13.983453 32.612484 14.081391 34.193516 14.650391 35.228516 C 15.168391 36.160516 16.229687 37 17.429688 37 L 19 37 L 19 40.251953 C 12.043156 38.12245 7 31.665102 7 24 C 7 21.314402 7.6195896 18.783427 8.7246094 16.529297 A 1.50015 1.50015 0 0 0 7.4492188 14.351562 A 1.50015 1.50015 0 0 0 6.03125 15.208984 C 4.7302698 17.862854 4 20.851598 4 24 C 4 35.027708 12.972292 44 24 44 C 28.472909 44 32.618147 42.525863 35.951172 40.039062 A 1.5009817 1.5009817 0 1 0 34.15625 37.632812 C 32.617628 38.780793 30.876119 39.662932 29 40.240234 L 29 35.136719 C 29 33.228719 27.902453 31.591391 26.314453 30.775391 C 30.719453 29.939391 34 26.78 34 23 C 34 21.426 33.423406 19.961609 32.441406 18.724609 C 32.883406 17.356609 33.371219 14.953172 32.199219 13.076172 C 29.948219 13.076172 28.469672 14.622797 27.763672 15.591797 C 26.601672 15.213797 25.333 15 24 15 C 22.667 15 21.398328 15.213797 20.236328 15.591797 C 19.530328 14.622797 18.052781 13.076172 15.800781 13.076172 z"></path>
                         </svg></a>
