--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <!-- Project 1 -->
             <article class=" project card card1  " data-reveal >
                 <div class="meta">
-                    <h4>Pune Places Web Project</h4>
+                    <h4><b>Pune Places Web Project</b></h4>
                     <p class="kicker">A small city showcase with cards, category filters, and playful hover effects.</p>
                     <div class="tags">
                         <span class="tag">HTML</span>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="hero-actions">
                         <a class="btn" href="001puneweb.ccbp.tech" target="_blank" rel="noreferrer">View Live</a>
-                        <a class="btn ghost" href="#" target="_blank" rel="noreferrer">GitHub</a>
+                        <a class="btn ghost" href="https://github.com/Mrudula-Baraskar/Tourism_pune.git" target="_blank" rel="noreferrer">GitHub</a>
                     </div>
                 </div>
                 <div class="shot" aria-hidden="true">
@@ -164,7 +164,7 @@
                     <img src="images/Screenshot 2025-08-15 124850.png">
                 </div>
                 <div class="meta">
-                    <h4>Simple Calculator Web App</h4>
+                    <h4><b>Simple Calculator Web App</b></h4>
                     <p class="kicker">A clean and interactive calculator built with HTML, CSS, and JavaScript. Handles basic operations with a responsive design.</p>
                     <div class="tags">
                         <span class="tag">HTML</span>
@@ -173,7 +173,48 @@
                     </div>
                     <div class="hero-actions">
                         <a class="btn" href="#" target="_blank" rel="noreferrer">View Live</a>
-                        <a class="btn ghost" href="#" target="_blank" rel="noreferrer">GitHub</a>
+                        <a class="btn ghost" href="https://github.com/Mrudula-Baraskar/Calculator.git" target="_blank" rel="noreferrer">GitHub</a>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Project 3 -->
+            <article class=" project card card1  " data-reveal >
+                <div class="meta">
+                    <h4><b>College Notes Hub</b></h4>
+                    <p class="kicker">a simple website to access notes semester-wise and subject-wise.</p>
+                    <div class="tags">
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">Bootstrap</span>
+                    </div>
+                    <div class="hero-actions">
+                        <a class="btn" href="https://68b6f5a8141063589c609f1c--marvelous-chimera-c6bee4.netlify.app/" target="_blank" rel="noreferrer">View Live</a>
+                        <a class="btn ghost" href="https://github.com/Mrudula-Baraskar/Noteswebsite.git" target="_blank" rel="noreferrer">GitHub</a>
+                    </div>
+                </div>
+                <div class="shot" aria-hidden="true">
+                    <!-- Replace with screenshot of Pune Places project -->
+                     <img src="images\Screenshot 2026-02-06 120045.png">
+                </div>
+            </article>
+
+            <!-- Project 4 -->
+            <article class="project card card1" data-reveal>
+                <div class="shot" aria-hidden="true">
+                    <img src="images\Screenshot 2026-02-06 090649.png">
+                </div>
+                <div class="meta">
+                    <h4><b>Coffee Sales Data Analysis</b></h4>
+                    <p class="kicker">This project analyzes a real coffee sales dataset using Python, Pandas, and NumPy to uncover top-selling coffee types and monthly sales trends. It helped me practice data cleaning, aggregation, and visualization on real-world data.</p>
+                    <div class="tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">NumPy</span>
+                        <span class="tag">Pandas</span>
+                    </div>
+                    <div class="hero-actions">
+                        <a class="btn" href="#" target="_blank" rel="noreferrer">View Live</a>
+                        <a class="btn ghost" href="https://github.com/Mrudula-Baraskar/Coffee-Sales-Data-Analysis-using-NumPy-Pandas.git" target="_blank" rel="noreferrer">GitHub</a>
                     </div>
                 </div>
             </article>
@@ -341,8 +382,8 @@
                 <p style="color:var(--muted)">Prefer email or LinkedIn for quick replies.</p>
                 <p><strong>
 
-                 <svg xmlns="http://www.w3.org/2000/svg" class="icon2" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M112 128C85.5 128 64 149.5 64 176C64 191.1 71.1 205.3 83.2 214.4L291.2 370.4C308.3 383.2 331.7 383.2 348.8 370.4L556.8 214.4C568.9 205.3 576 191.1 576 176C576 149.5 554.5 128 528 128L112 128zM64 260L64 448C64 483.3 92.7 512 128 512L512 512C547.3 512 576 483.3 576 448L576 260L377.6 408.8C343.5 434.4 296.5 434.4 262.4 408.8L64 260z"/>
-                 </svg>:
+<svg xmlns="http://www.w3.org/2000/svg" class="icon2" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M112 128C85.5 128 64 149.5 64 176C64 191.1 71.1 205.3 83.2 214.4L291.2 370.4C308.3 383.2 331.7 383.2 348.8 370.4L556.8 214.4C568.9 205.3 576 191.1 576 176C576 149.5 554.5 128 528 128L112 128zM64 260L64 448C64 483.3 92.7 512 128 512L512 512C547.3 512 576 483.3 576 448L576 260L377.6 408.8C343.5 434.4 296.5 434.4 262.4 408.8L64 260z"/>
+</svg>:
               </strong> <a href="mailto:mrudula@example.com">mrudula@example.com</a></p>
                 <p><strong>
                     
